Name:                happlet-power
Version:             0.1.0
Description:         Gtk system tray applet for power displaying
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Gtk system tray applet for power displaying
Category:            UI
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/happlet-power
Cabal-Version:       >=1.6

Executable           happlet-power
  Main-Is:           HappletPower.hs
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , mtl
                   , directory
                   , filepath
                   , process
                   , gtk
  ghc-options:       -Wall -fno-warn-missing-signatures -threaded

source-repository head
  type:     git
  location: git://github.com/vincenthz/happlet-power
